cluster/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/hostname: flux-webhook.kaminek.me
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.kaminek.me
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
